# hedge-fund-at-home-render

./: .gitignore  README.md  pyproject.toml  render.yaml
.cursor/rules/: git-authorship.mdc
hfah_render.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hfah_site/: config_api.py  doc_serve.py  learn_assets.py  pairs_demo.py  paths.py  snapshot.py
hfah_site/cli/: api_serve.py  learn_ui.py  render_serve.py
scripts/: render_build.sh
