[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfah-render"
version = "0.1.0"
description = "Public code-lab API for Hedge Fund at Home (Render). No learn UI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ashlyn Bain"}]
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
hfah-api-serve = "hfah_site.cli.api_serve:main"

[tool.setuptools.packages.find]
include = ["hfah_site*"]
